# lib/handlers/service-accounts-auth.js
@@ -128,7 +128,8 @@ export async function getDeclarantContextHandler(req, res) {
       return {
         point: {
           id: exploitation.pointPrelevement.id,
-          name: exploitation.pointPrelevement.name
+          name: exploitation.pointPrelevement.name,
+          flowType: exploitation.pointPrelevement.flowType ?? 'PRELEVEMENT'
         },
         mostRecentAvailableDate: exploitation.mostRecentAvailableDate,
         connectors
